--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-
+<!DOCTYPE html>
+    <html lang="pt-br">
+    <head>
+        <meta charset="UTF-8"> 
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Juliana Gurgel Pereira</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header></header>
+        <main class="apresentacao">
+          <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Prova de HtMl</strong> </h1>
+             <p class="apresentacao__conteudo__texto">HTML é a linguagem de marcação padrão para a criação de páginas da Web.
+                O que é um elemento HTML?
+                (Linguagem de Marcação de Hipertexto) é o código que você usa para estruturar uma página web e seu conteúdo. Por exemplo, o conteúdo pode ser estruturado em parágrafos, em uma lista com marcadores ou usando imagens e tabelas. Como o título sugere, este artigo fornecerá uma compreensão básica do HTML e suas funções.
+                O objetivo de um navegador da web (Chrome, Edge, Firefox, Safari) é ler documentos HTML e exibi-los corretamente.
+                Um navegador não exibe as tags HTML, mas as utiliza para determinar como exibir o documento
+                HTML não é uma linguagem de programação; é uma linguagem de marcação, usada para definir a estrutura do seu conteúdo. HTML consiste de uma série de elementos, que você usa para delimitar ou agrupar diferentes partes do conteúdo para que ele apareça ou atue de determinada maneira. As tags anexas podem transformar uma palavra ou imagem num hiperlink, pode colocar palavras em itálico, pode aumentar ou diminuir a fonte e assim por diante. Por exemplo, veja a seguinte linha de conteúdo:
+                Meu gatinho é muito mal humorado
+                Se quiséssemos que a linha permanecesse por si só, poderíamos especificar que é um parágrafo colocando-a em uma tag de parágrafo:
+                </p>
+    
+                 <div class="apresentacao__links">
+                    <a class="apresentacao__links__link" href="index2.html">Curriculo</a width="10">
+                 </div>
+                 <img src="foto.png" alt="fotodahtml" width="500"> 
+                 
+              </section>
+            </main>
+        <footer></footer>
+    </body>
+    </html>
