--- a/index2.html
+++ b/index2.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Currículo</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #000;
+            margin: 0;
+            padding: 0;
+        }
 
+        #header {
+            background-color: rgb(49, 136, 132);
+            color: #000;
+            text-align: center;
+            padding: 20px;
+        }
+
+        #profile-image {
+            max-width: 200px;
+            border-radius: 50%;
+            display: block;
+            margin: 0 auto;
+        }
+
+        #main-content {
+            padding: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div id="header">
+        <h1>Meu Currículo </h1>
+    </div>
+    <div id="main-content">
+        <h2 class="curriculo">Dados Pessoais</h2>
+        <img id="profile-image" src="ft.jpg" alt="Foto de Perfil">
+        <p>Nome: Juliana  Gurgel Pereira</p>
+        <p>E-mail: juliana.pereira@aluno.fmpsc.edu.br</p>
+        <p>Telefone: (48) 9966-7890</p>
+
+        <h2>Experiência Profissional</h2>
+        <p>Cargo: Operacional</p>
+        <p>Intelbras</p>
+        
+        <p>Descrição:Teste de Wifi</p>
+
+        <h2>Formação Acadêmica</h2>
+        <p>Curso: ADM</p>
+        <p>Instituição:FMP </p>
+        <p>Ano de Conclusão: 2026</p>
+
+        
+    <p>Volte aqui</p>
+    <a class="apresentacao__links__link" href="index.html">Home</a width="10">
+
+    </div>
+</body>
+</html>
